# OpenMusic

./: .gitignore  README.md  vercel.json
backend/: download.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: audio.py
backend/app/services/: converter.py  youtube.py
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
