[project]
name = "neo-music-api"
version = "0.1.0"
requires-python = ">=3.13"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true

[tool.fastapi]
entrypoint = "app.main:app"
